<resources>
    <string name="app_name">TP_Mercadolibre</string>
    <string name="tituloProducto">Notebook Asus Intel Dual Core Hd Usb Hdmi 15.6 4gb 500gb </string>
    <string name="precioProducto">$ 69.999</string>
    <string name="cantidadProducto">Cantidad Disponible: 33</string>
    <string name="descripcionProducto">Breve Descripcion de articulo</string>
    <string name="condicionProducto">Usado</string>
    <string name="comprar">Comprar</string>
    <string name="agregaralCarrito">Agregar al Carrito</string>
    <string name="modoventa">Compra inmediata</string>
    <string name="direccion">CABA, Belgrano</string>
    <string name="mercadopago">Acepta Mercadopago</string>
    <string name="idML">ML1454755124</string>

</resources>
