<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:background="@color/back">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="217dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="162dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="155dp"
            android:layout_height="126dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_heart" />

        <TextView
            android:id="@+id/condicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/condicionProducto"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintVertical_bias="0.142" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/precioProducto"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/direccion"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="209dp"
            android:layout_height="47dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/tituloProducto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/precio"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <TextView
            android:id="@+id/id_item"
            android:layout_width="72dp"
            android:layout_height="12dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/idML"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/direccion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <TextView
            android:id="@+id/mercadopago"
            android:layout_width="166dp"
            android:layout_height="21dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:background="#C02CDA"
            android:backgroundTint="#9C27B0"
            android:text="@string/mercadopago"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/modoventa"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <TextView
            android:id="@+id/modoventa"
            android:layout_width="79dp"
            android:layout_height="19dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/modoventa"
            app:layout_constraintBottom_toTopOf="@+id/titulo"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
